// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-expand-btn Renders \`c-expand-btn\` correctly. 1`] = `
<button
  class="v-btn v-btn--icon v-btn--round theme--light v-size--small"
  type="button"
>
  <span
    class="v-btn__content"
  >
    <i
      aria-hidden="true"
      class="v-icon notranslate material-icons theme--light"
    >
      keyboard_arrow_down
    </i>
  </span>
</button>
`;

exports[`c-expand-btn Renders \`c-expand-btn\` expanded correctly. 1`] = `
<button
  class="v-btn v-btn--icon v-btn--round theme--light v-size--small"
  type="button"
>
  <span
    class="v-btn__content"
  >
    <i
      aria-hidden="true"
      class="v-icon notranslate material-icons theme--light"
    >
      keyboard_arrow_up
    </i>
  </span>
</button>
`;

exports[`c-expand-btn Renders \`c-expand-btn\` with custom color correctly. 1`] = `
<button
  class="v-btn v-btn--icon v-btn--round theme--light v-size--small"
  type="button"
>
  <span
    class="v-btn__content"
  >
    <i
      aria-hidden="true"
      class="v-icon notranslate material-icons theme--light custom-color--text"
    >
      keyboard_arrow_down
    </i>
  </span>
</button>
`;
